clusters/apps/platform/cert-manager/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cert-manager
  labels:
    app.kubernetes.io/name: cert-manager
    app.kubernetes.io/part-of: fleet
    app.kubernetes.io/managed-by: argocd
